[tool.poetry]
name = "valuation_office_ireland"
version = "0.1.0"
description = "An unofficial Python API for the Valuation Office REST API"
authors = ["Rowan Molony <rowan.molony@codema.ie>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.1 || ^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
